Adding telecommand batches route and base code
- Added telecommand batch route
- Added telecommandBatch and telecommandBatchDetails components

--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -4,3 +4,6 @@ This is a header!!!
 <nav>
   <a routerLink="/telecommands">Telecommands</a>
 </nav>
+<nav>
+  <a routerLink="/telecommandBatches">Telecommand Batches</a>
+</nav>
