--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -7,3 +7,6 @@ This is a header!!!
 <nav>
   <a routerLink="/telecommandBatches">Telecommand Batches</a>
 </nav>
+<nav>
+  <a routerLink="/queue">Telecommand Queue</a>
+</nav>
