--- a/frontend/mission-ops/src/app/queues/queues.component.html
+++ b/frontend/mission-ops/src/app/queues/queues.component.html
@@ -2,9 +2,9 @@
 <button (click)="selectTransmission()">TelecommandTransmission Queue</button>
 
 <div *ngIf="executionQueue">
-  <app-execution-queue></app-execution-queue>
+  <app-execution-queue [passes] = "passes"></app-execution-queue>
 </div>
 <div *ngIf="transmissionQueue">
-  <app-transmission-queue></app-transmission-queue>
+  <app-transmission-queue [passes] = "passes"></app-transmission-queue>
 </div>
 
