Fixed undefined global

--- a/frontend/mission-ops/src/app/login/login.component.html
+++ b/frontend/mission-ops/src/app/login/login.component.html
@@ -6,7 +6,7 @@
   </label>
   <label>
     Password:
-    <input type="password" [(ngModel)]="password" placeholder="Password"/>
+    <input [(ngModel)]="password" type="password" placeholder="Password"/>
   </label>
   <button (click)="signIn()">Sign In</button>
 </div>
