--- a/frontend/mission-ops/src/app/login/login.component.html
+++ b/frontend/mission-ops/src/app/login/login.component.html
@@ -1,12 +1,14 @@
-<div>
-  <h1>Login</h1>
-  <label>
-    Username:
-    <input [(ngModel)]="username" placeholder="Username"/>
-  </label>
-  <label>
-    Password:
-    <input [(ngModel)]="password" type="password" placeholder="Password"/>
-  </label>
-  <button (click)="signIn()">Sign In</button>
+<div class="container">
+  <h2>Login</h2>
+  <form>
+    <div class="form-group">
+      <label for="usernameInput">Username</label>
+      <input [(ngModel)]="username" type="text" class="form-control" id="usernameInput" placeholder="Username" name="username">
+    </div>
+    <div class="form-group">
+      <label for="passwordInput">Password</label>
+      <input [(ngModel)]="password" type="password" class="form-control" id="passwordInput" placeholder="Password" name="password">
+    </div>
+    <button (click)="signIn()" class="btn btn-primary">Sign In</button>
+  </form>
 </div>
