Added error popup for create-user

--- a/frontend/mission-ops/src/app/create-user/create-user.component.html
+++ b/frontend/mission-ops/src/app/create-user/create-user.component.html
@@ -7,6 +7,7 @@
   <div class="form-group">
     <label for="passwordInput">Password</label>
     <input [(ngModel)]="password" type="password" class="form-control" id="passwordInput" placeholder="Password" name="password">
+    <small id="passwordHelp" class="form-text text-muted">Password must be at least 8 characters long, and contain at least one lowercase letter, one uppercase letter, one number, and one special character.</small>
   </div>
   <div class="form-group">
     <label for="confirmPasswordInput">Confirm Password</label>
@@ -20,5 +21,15 @@
     <label for="phoneNumberInput">Phone Number (Optional)</label>
     <input [(ngModel)]="phoneNumber" type="text" class="form-control" id="phoneNumberInput" placeholder="Phone Number" name="phoneNumber">
   </div>
-  <button (click)="create()" class="btn btn-primary">Create</button>
+  <div *ngIf="showAlert" class="alert alert-danger" role="alert">
+    <button (click)="showAlert = false" type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <h4 class="alert-heading">{{errorHeading}}</h4>
+    <p class="mb-0">{{errorBody}}</p>
+  </div>
+  <button (click)="create()" class="btn btn-primary">
+    Create
+    <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+  </button>
 </form>
