--- a/frontend/mission-ops/src/app/login/login.component.html
+++ b/frontend/mission-ops/src/app/login/login.component.html
@@ -8,13 +8,7 @@
     <label for="passwordInput">Password</label>
     <input [(ngModel)]="password" type="password" class="form-control" id="passwordInput" placeholder="Password" name="password">
   </div>
-  <div *ngIf="showAlert" class="alert alert-danger" role="alert">
-    <button (click)="showAlert = false" type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    <h4 class="alert-heading">{{errorHeading}}</h4>
-    <p class="mb-0">{{errorBody}}</p>
-  </div>
+  <app-alert [alertStyle]="'danger'"></app-alert>
   <button (click)="signIn()" class="btn btn-primary">
     Sign In
     <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
