--- a/frontend/mission-ops/src/app/new-password/new-password.component.html
+++ b/frontend/mission-ops/src/app/new-password/new-password.component.html
@@ -7,8 +7,5 @@
     <label for="confirmNewPasswordInput">Confirm New Password</label>
     <input [(ngModel)]="confirmNewPassword" type="password" class="form-control" id="confirmNewPasswordInput" placeholder="Confirm New Password" name="confirmNewPassword">
   </div>
-  <button (click)="changePassword()" class="btn btn-primary">
-    Change Password
-    <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-  </button>
-</form>>
+  <app-alert [alertStyle]="'danger'"></app-alert>
+</form>
