--- a/frontend/mission-ops/src/app/create-user/create-user.component.html
+++ b/frontend/mission-ops/src/app/create-user/create-user.component.html
@@ -1,25 +1,17 @@
 <h2>Create User</h2>
 <form>
   <div class="form-group">
-    <label for="usernameInput">Username</label>
-    <input [(ngModel)]="username" type="text" class="form-control" id="usernameInput" placeholder="Username" name="username">
-  </div>
-  <div class="form-group">
-    <label for="passwordInput">Password</label>
-    <input [(ngModel)]="password" type="password" class="form-control" id="passwordInput" placeholder="Password" name="password">
-    <small id="passwordHelp" class="form-text text-muted">Password must be at least 8 characters long, and contain at least one lowercase letter, one uppercase letter, one number, and one special character.</small>
-  </div>
-  <div class="form-group">
-    <label for="confirmPasswordInput">Confirm Password</label>
-    <input [(ngModel)]="confirmPassword" type="password" class="form-control" id="confirmPasswordInput" placeholder="Confirm Password" name="confirmPassword">
-  </div>
-  <div class="form-group">
-    <label for="emailInput">Email (Optional)</label>
+    <label for="emailInput">Email</label>
     <input [(ngModel)]="email" type="email" class="form-control" id="emailInput" placeholder="Email" name="email">
   </div>
   <div class="form-group">
-    <label for="phoneNumberInput">Phone Number (Optional)</label>
-    <input [(ngModel)]="phoneNumber" type="text" class="form-control" id="phoneNumberInput" placeholder="Phone Number" name="phoneNumber">
+    <label for="passwordInput">Temporary Password</label>
+    <input [(ngModel)]="password" type="password" class="form-control" id="passwordInput" placeholder="Temporary Password" name="password">
+    <small id="passwordHelp" class="form-text text-muted">Password must be at least 8 characters long, and contain at least one lowercase letter, one uppercase letter, one number, and one special character.</small>
+  </div>
+  <div class="form-group form-check">
+    <input [(ngModel)]="admin" type="checkbox" class="form-check-input" id="adminInput" name="admin">
+    <label class="form-check-label" for="adminInput">Administrator</label>
   </div>
   <app-alert [alertStyle]="'danger'"></app-alert>
   <button (click)="create()" class="btn btn-primary">
