--- a/frontend/mission-ops/src/app/users/users.component.html
+++ b/frontend/mission-ops/src/app/users/users.component.html
@@ -16,7 +16,9 @@
             <input [ngModel]="user.administrator" type="checkbox" class="form-check-input" disabled>
           </div>
         </td>
-        <td>Actions go here</td>
+        <td>
+          <button (click)="promptDeleteUser(user)" class="btn btn-outline-danger" [attr.disabled]="auth.getCurrentUser().email === user.email ? '' : null">Delete</button>
+        </td>
       </tr>
     </ng-container>
     <ng-template #tableSpinner>
@@ -32,3 +34,21 @@
     </ng-template>
   </tbody>
 </table>
+<app-modal #deleteUserModal>
+  <ng-container modal-title>
+    <h1>Are You Sure?</h1>
+  </ng-container>
+  <ng-container modal-body>
+    <p>Are you sure you want to delete user <span class="text-primary">{{deletingUser?.email}}</span>?</p>
+    <p>They will be deleted <span class="text-danger">permanently</span> and can never be recovered.</p>
+    <p>Enter their email into the field below to confirm you want to delete them.</p>
+    <input [(ngModel)]="deleteConfirm" class="form-control" type="email" placeholder="Email" name="deleteConfirm">
+    <app-alert #deleteUserAlert [alertStyle]="'danger'"></app-alert>
+  </ng-container>
+  <ng-container modal-footer>
+    <button (click)="deleteUser()" class="btn btn-danger" [attr.disabled]="deleteConfirm !== deletingUser?.email ? '' : null">
+      Delete
+      <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+    </button>
+  </ng-container>
+</app-modal>
