Making data flow all the way!
Hooked up the db to our backend to our frontend. Got the front end displaying data stored in the aws rds instance. added a TODO to pull the api address to a global location

--- a/frontend/mission-ops/src/app/telecommands/telecommands.component.html
+++ b/frontend/mission-ops/src/app/telecommands/telecommands.component.html
@@ -3,7 +3,7 @@
   <li *ngFor="let telecommand of telecommands"
   (click)="onSelect(telecommand)"
   [class.selected]="telecommand === selectedTelecommand">
-    <span class="badge">{{telecommand.id}}</span> {{telecommand.name}}
+    <span class="badge">{{telecommand.telecommandID}} {{telecommand.componentID}}</span> {{telecommand.name}} {{telecommand.command}} {{telecommand.defaultPriorityLevel}} {{telecommand.bandwidthUsage}} {{telecommand.powerConsumption}}
   </li>
 </ul>
 <app-telecommand-details [telecommand] = "selectedTelecommand"></app-telecommand-details>
