--- a/frontend/mission-ops/src/app/users/users.component.html
+++ b/frontend/mission-ops/src/app/users/users.component.html
@@ -9,7 +9,7 @@
   </thead>
   <tbody>
     <ng-container *ngIf="userList; else tableSpinner">
-      <tr *ngFor="let user of userList.users">
+      <tr *ngFor="let user of userList">
         <td>{{user.email}}</td>
         <td>
           <div class="form-check">
