--- a/frontend/mission-ops/src/app/telecommands/telecommands.component.html
+++ b/frontend/mission-ops/src/app/telecommands/telecommands.component.html
@@ -1,9 +1,22 @@
 <h2>Telecommands</h2>
-<ul>
-  <li *ngFor="let telecommand of telecommands"
-  (click)="onSelect(telecommand)"
-  [class.selected]="telecommand === selectedTelecommand">
-    <span class="badge">{{telecommand.telecommandID}} {{telecommand.componentID}}</span> {{telecommand.name}} {{telecommand.command}} {{telecommand.defaultPriorityLevel}} {{telecommand.bandwidthUsage}} {{telecommand.powerConsumption}}
-  </li>
-</ul>
-<app-telecommand-details [telecommand] = "selectedTelecommand"></app-telecommand-details>
+<div class="row">
+    <div class="col">
+      <button type="button"
+      class="btn btn-success"
+      (click)="addNewTelecommand()">Add New Telecommand</button>
+      <ul class="list-group">
+        <li *ngFor="let telecommand of telecommands"
+        (click)="onSelect(telecommand)"
+        [class.active]="telecommand === selectedTelecommand"
+        class="list-group-item">
+          {{telecommand.name}}
+        </li>
+      </ul>
+    </div>
+    <div class="col">
+      <app-telecommand-details [telecommand] = "selectedTelecommand" [existingTelecommand] = "viewingExistingTelecommand"></app-telecommand-details>      
+      
+      <button *ngIf="!viewingExistingTelecommand" (click)="saveTelecommand()" type="button" class="btn btn-success">Save Changes</button>
+      <button *ngIf="selectedTelecommand" (click)="archiveTelecommand()" type="button" class="btn btn-danger">Archive Telecommand</button>
+    </div>
+</div>
