--- a/frontend/mission-ops/src/app/create-user/create-user.component.html
+++ b/frontend/mission-ops/src/app/create-user/create-user.component.html
@@ -4,6 +4,17 @@
     <label for="emailInput">Email</label>
     <input [(ngModel)]="email" type="email" class="form-control" id="emailInput" placeholder="Email" name="email">
   </div>
+  <div class="form-group">
+    <label for="phoneInput">Phone (Optional)</label>
+    <input [(ngModel)]="phone" type="text" class="form-control" id="phoneInput" placeholder="Phone" name="phone">
+  </div>
+  <div class="form-group">
+    <label for="contactSelect">Preferred Contact Method</label>
+    <select [(ngModel)]="prefContact" class="form-control" id="contactSelect" name="contact">
+      <option value="email">Email</option>
+      <option value="sms">SMS</option>
+    </select>
+  </div>
   <div class="form-group form-check">
     <input [(ngModel)]="admin" type="checkbox" class="form-check-input" id="adminInput" name="admin">
     <label class="form-check-label" for="adminInput">Administrator</label>
