--- a/frontend/mission-ops/src/app/component-list/component-list.component.html
+++ b/frontend/mission-ops/src/app/component-list/component-list.component.html
@@ -1,1 +1,16 @@
-
+<h2>Components</h2>
+<div class = "row">
+  <div class = "col">
+    <ul class="list-group">
+      <li *ngFor="let component of components"
+      (click)="onSelect(component)"
+      [class.active]="component === selectedComponent"
+      class="list-group-item">
+        {{component.name}}
+    </li>
+    </ul>
+  </div>
+  <div class = "col">
+    
+  </div>
+</div>
