Added x and y display in tooltip, made chart component more generic
WOOOOOO :partly_sunny:

--- a/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
+++ b/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
@@ -1,7 +1,9 @@
 <div *ngIf = "componentTelemetry">
   <div *ngIf = "telemetryData">
-    <div class = "container">
-      <app-chart [telemetryData] = "telemetryData"></app-chart>
-    </div>
+        <app-chart [values] = "telemetryValues"
+        [title] = "componentTelemetry.name"
+        [xAxis] = "'Time'"
+        [name] = "'Some Measurement'"
+        [labels] = "telemetryTimes"></app-chart>
   </div>
 </div>
