Minor formatting of graphs
:panda_face:

--- a/frontend/mission-ops/src/app/component-telemetry/component-telemetry.component.html
+++ b/frontend/mission-ops/src/app/component-telemetry/component-telemetry.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="component">
   <ul class="list-group">
       <li *ngFor="let componentTelemetry of componentTelemetries"
-      class="list-group-item">
+      class="list-group-item" style="margin:auto">
         <app-telemetry-data [componentTelemetry] = "componentTelemetry"></app-telemetry-data>
       </li>
     </ul>
