--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -18,9 +18,10 @@
       </li>
       <ng-template #alreadyAuthenticated>
         <li class="nav-item dropdown" ngbDropdown>
-          <a class="nav-link dropdown-toggle" ngbDropdownToggle role="button" aria-haspopup="true" aria-expanded="false">{{auth.getCurrentUser().email}}</a>
+          <a class="nav-link dropdown-toggle" ngbDropdownToggle role="button" aria-haspopup="true" aria-expanded="false">{{auth.getCurrentUser()?.email}}</a>
           <div ngbDropdownMenu class="dropdown-menu">
-            <a class="dropdown-item" href="/users/edit?id={{auth.getCurrentUser().id}}">Edit Profile</a>
+            <a class="dropdown-item" href="/users/edit?id={{auth.getCurrentUser()?.id}}">Edit Profile</a>
+            <a *ngIf="auth.isAdministrator()" class="dropdown-item" href="/users">Manage Users</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout">Logout</a>
           </div>
