Added ability to reset users passwords

--- a/frontend/mission-ops/src/app/modify-user/modify-user.component.html
+++ b/frontend/mission-ops/src/app/modify-user/modify-user.component.html
@@ -19,7 +19,17 @@
     <input [(ngModel)]="user.administrator" type="checkbox" class="form-check-input" id="adminInput" name="admin" [attr.disabled]="!auth.isAdministrator() ? '' : null">
     <label class="form-check-label" for="adminInput">Administrator</label>
   </div>
-  <app-alert [alertStyle]="'danger'"></app-alert>
+  <div class="form-group">
+    <button *ngIf="user?.id === auth.getCurrentUser()?.id; else resetPasswordButton" (click)="promptChangePassword()" class="btn btn-primary">
+      Change Password
+    </button>
+    <ng-template #resetPasswordButton>
+      <button (click)="resetPassword()" class="btn btn-primary">
+        Reset Password
+      </button>
+    </ng-template>
+  </div>
+  <app-alert [alertStyle]="'danger'" #generalAlert></app-alert>
   <button (click)="saveChanges()" class="btn btn-primary">
     Save Changes
     <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -35,3 +45,32 @@
     </div>
   </div>
 </ng-template>
+<app-modal>
+  <ng-container modal-title>
+    Change Password
+  </ng-container>
+  <ng-container modal-body>
+    <form>
+      <div class="form-group">
+        <label for="oldPasswordInput">Current Password</label>
+        <input [(ngModel)]="oldPassword" type="password" class="form-control" id="oldPasswordInput" placeholder="Current Password" name="oldPassword">
+      </div>
+      <div class="form-group">
+        <label for="newPasswordInput">New Password</label>
+        <input [(ngModel)]="newPassword" type="password" class="form-control" id="newPasswordInput" placeholder="New Password" name="newPassword">
+        <small id="newPasswordHelp" class="form-text text-muted">Password must be at least 8 characters long, and contain at least one lowercase letter, one uppercase letter, one number, and one special character.</small>
+      </div>
+      <div class="form-group">
+        <label for="confirmNewPasswordInput">Confirm New Password</label>
+        <input [(ngModel)]="confirmNewPassword" type="password" class="form-control" id="confirmNewPasswordInput" placeholder="Confirm New Password" name="confirmNewPassword">
+      </div>
+      <app-alert [alertStyle]="'danger'" #passwordChangeAlert></app-alert>
+    </form>
+  </ng-container>
+  <ng-container modal-footer>
+    <button (click)="changePassword()" class="btn btn-primary">
+      Change Password
+      <span *ngIf="passwordProcessing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+    </button>
+  </ng-container>
+</app-modal>
