--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -1,13 +1,53 @@
 <h2>CubeSat System Inputs</h2>
 <div class = "row">
-    <div class = "col-md-3">
+  <div class = "col-md-3">
+    <div class = "container">
       <ul class="list-group">
           <li *ngFor="let system of systems"
-          (click)="onSelect(system)"
+          (click)="onSelectSys(system)"
           [class.active]="system === selectedSystem"
           class="list-group-item">
-            {{system.name}}
+            {{system.systemName}}
           </li>
         </ul>
     </div>
+  </div>
+  <div class = "col-md-3">
+    <div class = "container">
+      <div *ngIf = "selectedSystem; else noSystem">
+          <ul class="list-group">
+              <li *ngFor="let component of components"
+              (click)="onSelectComp(component)"
+              [class.active]="component === selectedComponent"
+              class="list-group-item">
+                {{component.name}}
+              </li>
+            </ul>
+      </div>
+      <ng-template #noSystem>
+        <p>
+          Please select a system to view, modify and delete components.
+        </p>
+      </ng-template>
+    </div>
+  </div>
+  <div class = "col-md-6">
+    <div class = "container">
+      <div *ngIf = "selectedComponent; else noComponent">
+          <ul class="list-group">
+              <li *ngFor="let compTelem of compTelemetries"
+              (click)="onSelectCompTelem(compTelem)"
+              [class.active]="compTelem === selectedCompTelem"
+              class="list-group-item">
+                {{compTelem.name}}
+              </li>
+            </ul>
+      </div>
+      <ng-template #noComponent>
+        <p>
+          Please select a component to view, modify and delete component telemetries.
+        </p>
+      </ng-template>
+    </div>
+  </div>
 </div>
