--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -2,6 +2,7 @@
 <div class = "row">
   <div class = "col-md-3">
     <div class = "container">
+      <h4>Systems</h4>
       <ul class="list-group">
           <li *ngFor="let system of systems"
           (click)="onSelectSys(system)"
@@ -16,6 +17,7 @@
   </div>
   <div class = "col-md-3">
     <div class = "container">
+      <h4>Components</h4>
       <div *ngIf = "selectedSystem; else noSystem">
           <ul class="list-group">
               <li *ngFor="let component of components"
@@ -26,6 +28,7 @@
                 {{component.name}}
               </li>
             </ul>
+            <button type="button" class="btn btn-outline-dark" (click)="addComponent('')">Add component</button>
       </div>
       <ng-template #noSystem>
         <p>
@@ -36,6 +39,7 @@
   </div>
   <div class = "col-md-6">
     <div class = "container">
+      <h4>Component Telemetries</h4>
       <div *ngIf = "selectedComponent; else noComponent">
           <ul class="list-group">
               <li *ngFor="let compTelem of compTelemetries"
