--- a/frontend/mission-ops/src/app/create-system/create-system.component.html
+++ b/frontend/mission-ops/src/app/create-system/create-system.component.html
@@ -1,30 +1,24 @@
-<ng-template #content let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
+<div class="modal-header">
+    <h4 class="modal-title">Add CubeSat System</h4>
+    <button type="button" class="close" aria-label="Close"
+     (click)="activeModal.dismiss('Cross click')">
     </button>
   </div>
-  <div class="modal-body">
-    <form>
-      <div class="form-group">
-        <label for="dateOfBirth">Date of birth</label>
-        <div class="input-group">
-          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
-          </div>
+  <form [formGroup] = "createSysForm" (ngSubmit) = "submitNewSys()">
+    <div class = "modal-body">
+      <div class = "container">
+        <div class = "form-group">
+          <label for = "systemName">System Name</label>
+          <input type = "text"
+            class = "form-control"
+            formControlName = "systemName"/>
         </div>
       </div>
-    </form>
-  </div>
+    </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
+    <button class = "btn btn-success"
+      [disabled] = "!createSysForm.valid">
+      Add New System
+    </button>
   </div>
-</ng-template>
-
-<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
-
-<hr>
-
-<pre>{{closeResult}}</pre>
+  </form>
