Added create component modal
- Displays read-only system name in modal
- Allows user to input component name

--- a/frontend/mission-ops/src/app/create-component/create-component.component.html
+++ b/frontend/mission-ops/src/app/create-component/create-component.component.html
@@ -1,3 +1,32 @@
-<p>
-  create-component works!
-</p>
+<div class="modal-header">
+    <h4 class="modal-title">Add CubeSat Component</h4>
+    <button type="button" class="close" aria-label="Close"
+     (click)="activeModal.dismiss('Cross click')">
+    </button>
+  </div>
+  <form [formGroup] = "createCompForm" (ngSubmit) = "submitNewComp()">
+    <div class = "modal-body">
+      <div class = "container">
+        <div class = "form-group">
+          <label for = "system">System</label>
+          <input type = "text"
+            [ngModel] = "system.systemName"
+            class = "form-control"
+            formControlName = "system"
+            readonly/>
+        </div>
+        <div class = "form-group">
+          <label for = "name">Component Name</label>
+          <input type = "text"
+            class = "form-control"
+            formControlName = "name"/>
+        </div>
+      </div>
+    </div>
+  <div class="modal-footer">
+    <button class = "btn btn-success"
+      [disabled] = "!createCompForm.valid">
+      Add New Component
+    </button>
+  </div>
+  </form>
