--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -29,7 +29,7 @@
                 {{component.name}}
               </li>
             </ul>
-            <button type="button" class="btn btn-outline-dark" (click)="addComponent()">Add component</button>
+            <button type="button" class="btn btn-outline-dark" (click)="promptAddComponent()">Add component</button>
             <button type="button" class="btn btn-outline-dark" (click)="deleteComponent()">Remove component</button>
       </div>
       <ng-template #noSystem>
